comp: fixed sats symbol alignment in amount / balance comp

--- a/tailwind.css
+++ b/tailwind.css
@@ -209,6 +209,14 @@
   margin-right: 1rem
 }
 
+.mt-0 {
+  margin-top: 0px
+}
+
+.mt-0\.5 {
+  margin-top: 0.125rem
+}
+
 .mt-1 {
   margin-top: 0.25rem
 }
@@ -247,10 +255,6 @@
 
 .flex {
   display: flex
-}
-
-.h-1 {
-  height: 0.25rem
 }
 
 .h-1\/2 {
@@ -335,10 +339,6 @@
 
 .w-12 {
   width: 3rem
-}
-
-.w-16 {
-  width: 4rem
 }
 
 .w-2\/6 {
